--- a/css/_image.scss
+++ b/css/_image.scss
@@ -1,8 +1,12 @@
 .image {
 	border-radius: 100%;
 	width: 100%;
+	@media (min-width: $sm) {
+		margin: auto;
+  		max-width: 50vw;
+	}
 	@media (min-width: $md) {
-  		margin-right: $space-md;
+  		margin: 0 $space-md 0 0;
   		max-width: 25vw;
 	}
 }
