--- a/css/_visual.scss
+++ b/css/_visual.scss
@@ -60,7 +60,7 @@
   transform: rotate(185deg) translateX(5px) translateY(-2px);
 }
 
-@media (max-width: $sm) {
+@media (max-width: $md) {
   .c {
     border-left-width: 10px;
     box-shadow: -5px 0px 0 2.5px $color-darker, -10px 0px 0 3px $color-main-2, -15px 0px 0 3.5px rgba($color-main-2, 0.6);
@@ -487,7 +487,7 @@ $dino-red: #b21313;
 }
 
 
-@media (max-width: $sm) {
+@media (max-width: $md) {
   .game:before {
     border-radius: 10%;
     height: 50px;
