--- a/css/_typography.scss
+++ b/css/_typography.scss
@@ -6,15 +6,16 @@
 .h2 {
   font-size: 1.5rem;
   margin: 0.75rem 0;
+
+  &--white {
+    color: $white;
+  }
 }
 
 .h3 {
   margin: 1rem 0 0.5rem 0;
 }
 
-.h2--white {
-  color: $white; 
-}
 
 .footer__h2 {
   color: $color-main-1;
@@ -24,16 +25,16 @@
 
 .h2--pink,
 .h3 {
-  color: $color-main-2; 
+  color: $color-main-2;
 }
 
 .p {
   line-height: 1.6;
   margin: 0.5rem 0;
-}
 
-.p--small {
-  font-size: 0.9rem;
+  &--small {
+    font-size: 0.9rem;
+  }
 }
 
 .a {
@@ -44,10 +45,10 @@
   color: var(--color-darkest);
   font-weight: bold;
   text-decoration: none;
-}
 
-.a:hover, 
-.a:focus,
-.a:active {
-  background-image: linear-gradient($color-trans-hover, $color-trans-hover);
+  &:hover,
+  &:focus,
+  &:active {
+    background-image: linear-gradient($color-trans-hover, $color-trans-hover);
+  }
 }
