--- a/css/_section.scss
+++ b/css/_section.scss
@@ -2,14 +2,13 @@
   box-sizing: border-box;
   padding: 2.5vh 0;
   width: 100vw;
-}
+  &--white {
+    background-color: $white;
+  }
 
-.section--white {
-  background-color: $white;
-}
-
-.section--pink {
+  &--pink {
   background-color: $color-darker;
+  }
 }
 
 .section__content {
@@ -19,42 +18,42 @@
   @media (max-width: $md - 1) {
     padding: $space-md $space-sm;
   }
-}
 
-.section__content--flex {
-  align-items: center;
-  display: flex;
-  @media (max-width: $md - 1) {
-    flex-direction: column;
+  &--flex {
+    align-items: center;
+    display: flex;
+    @media (max-width: $md - 1) {
+      flex-direction: column;
+    }
   }
-}
 
-.section__content--hero {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
-  text-align: center;
-}
-
-.section__svg-wrapper {
-  animation: colorfy 10s ease-in-out infinite;
-  align-items: flex-end;
-  border-radius: 100%;
-  display: flex;
-  height: 25vw;
-  justify-content: center;
-  min-height: 300px;
-  min-width: 300px;
-  overflow: hidden;
-  position: relative;
-  width: 25vw;
+  &--hero {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+    text-align: center;
+  }
 }
 
 .section__svg {
   margin-bottom: -1vw;
   width: 80%;
+
+  &-wrapper {
+    animation: colorfy 10s ease-in-out infinite;
+    align-items: flex-end;
+    border-radius: 100%;
+    display: flex;
+    height: 25vw;
+    justify-content: center;
+    min-height: 300px;
+    min-width: 300px;
+    overflow: hidden;
+    position: relative;
+    width: 25vw;
+  }
 }
 
 @media (min-width: $md) {
